--- a/css/work-ut.css
+++ b/css/work-ut.css
@@ -11,11 +11,6 @@ h1{
   display: inline;
 }
 
-* {
-  margin: 0;
-  padding: 0;
-}
-
 body{
   display: grid;
   grid-template-rows:0.1, 0.8, 0.1;
@@ -285,11 +280,10 @@ button{
   border-radius: 20px
 }
 
-#map {
-  height: 630px;
-  width: 100%;
-}
-
 #size-font {
 line-height: 1.8rem;
+}
+
+#map_header{
+  position: fixed;
 }
